Thu Jul 29 10:43:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/MakeProjectCreator/config/global.features:
        * bin/MakeProjectCreator/config/inetssl.mpb:
        * protocols/ace/INet/inet_ssl.mpb:
          Created a new feature, inet_ssl. When set, the INet libary
          builds, using SSL. To let the INet libary use SSL, one should
          enable the inet_ssl feature in default.features and add ssl=1 to
          the platform_macos.GNU.

Mon Jul 26 20:26:53 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_Thread.h: Note that the cpu_set_size to the get/set
          affinity methods is a byte count.

Mon Jul 26 07:02:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/config/inet.mpb:
        * protocols/ace/INet/inet.mpc:
          Added avoids += corba_e_compact.

Thu Jul 22 04:35:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/config/inet.mpb:
        * protocols/ace/INet/inet.mpc:
          Added avoids += ace_for_tao.

Wed Jul 21 18:23:32 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Basic_Types.h (ACE_INT8_FORMAT_SPECIFIER): Added the missing
          "_ASCII" to the ACE_INT8_FORMAT_SPECIFIER macro usage.  Thanks
          to Andre Kostur <akostur at incognito dot com> for reporting
          this.

Wed Jul 21 15:52:32 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Service_Gestalt.h:
        * ace/Service_Gestalt.inl:
        * ace/Service_Gestalt.cpp:

          Reverted for_TAO specific change, revised the processing to
          ensure default first, then files, then cmdline directives.

Wed Jul 21 03:07:28 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Service_Gestalt.h:
        * ace/Service_Gestalt.cpp:

          Fix errors in premature committal.

Wed Jul 21 02:30:45 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Service_Gestalt.h:
        * ace/Service_Gestalt.inl: