@@ -1,3 +1,9 @@
+Thu Jul 29 14:41:32 UTC 2010  Steve Huston  <shuston@riverace.com>
+
+        * ace/Process.h (set_handles): Clarify that passing ACE_INVALID_HANDLE
+          for any of the handle values will cause a duplicate of the
+          corresponding ACE_STDIN/OUT/ERR to be used in the options.
+
 Thu Jul 29 10:43:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * bin/MakeProjectCreator/config/global.features:
